[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "din3962"
version = "0.1.0"
description = "Implementation of DIN 3962 - Tolerances for Cylindrical Gear Teeth"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [{name = "hanslhansl", email = "p4u1_1@posteo.at"}]
dependencies = [
]

[tool.setuptools]
packages = ["din3962"]