[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "din3962"
version = "0.1.0"
description = "Implementation of DIN 3962 - Tolerances for Cylindrical Gear Teeth"
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [{name = "hanslhansl"}]
dependencies = [
]

[tool.setuptools]
packages = ["din3962"]

[dependency-groups]
dev = [
	"pytest>=9.0.2",
	"pytest-cov>=5.0.0"
]